# aws-ops-observability

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
docs/cli-playbooks/: 01-observability.md
observability_lab/: observability_stack.py
scripts/: verify_observability.py
